src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__node_list_tests.snap
---
source: src/inspect/ui.rs
assertion_line: 806
expression: "render_to_string(&app, 80, 12)"
---
"┌ Tests ───────────────────────────┐┌ Detail ──────────────────────────────────┐"
"│ T  tests/test_auth.py::test_login││T tests/test_auth.py::test_login          │"
"│ T  tests/test_auth.py::test_logou││                                          │"
"│ T  tests/test_db.py::test_connect││  async: no                               │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"└──────────────────────────────────┘└──────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                        "
