src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__overview_cursor_second.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 12)"
---
" ○ overview                                                                     "
"┌──────────────────────────────────────────┐┌ Preview ─────────────────────────┐"
"│ Marks                                    ││Select an item to preview         │"
"│    M  slow (1 tests)                     ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"└──────────────────────────────────────────┘└──────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History             "
