src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__overview_declarations_section.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 16)"
---
" ○ overview                                                                     "
"┌──────────────────────────────────────────┐┌ Preview ─────────────────────────┐"
"│ Fixture Gravity                          ││F db                              │"
"│›   F  db (1 consumers)                   ││                                  │"
"│                                          ││  lifetime: function              │"
"│ Declarations                             ││  source: tests/__fixtures__.py   │"
"│    D  tests/__fixtures__.py (1 fixtures) ││                                  │"
"│                                          ││  Consumers (1)                   │"
"│                                          ││    T tests/test_db.py::test_conne│"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"└──────────────────────────────────────────┘└──────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History             "
