src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__search_query_displayed.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 4)"
---
"┌ Home ────────────────────────────┐┌ Detail ──────────────────────────────────┐"
"│No data loaded                    ││No data loaded                            │"
"└──────────────────────────────────┘└──────────────────────────────────────────┘"
" /test_foo  0/0 matches  Esc Cancel  Enter Accept  ↑/↓ Navigate                 "
