src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__single_pane_layout.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 60, 24)"
---
"┌ Home ────────────────────────────────────────────────────┐"
"│No data loaded                                            │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back    "
