src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__wide_layout_two_panes.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 120, 24)"
---
"┌ Home ──────────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────┐"
"│No data loaded                              ││No data loaded                                                          │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h History                                                             "
